# realestate-appreciation-ml

./: .gitignore  README.md  pyproject.toml
src/data/: download_zhvi.py  fetch_region_text.py  make_dataset.py
src/features/: build_features.py
src/models/: evaluate.py  predict.py  train.py
src/utils/: config.py  logging.py
tests/: test_smoke.py
